<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Octodo</string>
    <string name="app_description">The to-do app that won\'t pester you with guilt trips</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0</string>
    <string name="app_copyright">Copyright 2014 Inderjit Gill</string>
    <string name="app_thanks">No thanks to the burglars who stole my HTC Desire and therefore prevented the development of Octodo for Android 2.3+</string>

    <string name="about_label_thanks">thanks</string>
    <string name="about_label_license">license</string>
    <string name="about_label_third_party_libraries">third party libraries</string>
    <string name="about_label_contact">contact</string>
    <string name="about_label_email">Email</string>
    <string name="about_label_google_plus">Google+</string>
    <string name="about_label_twitter">Twitter</string>


    <string name="add_item">Add Item...</string>

    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="licence_sherlock">foo</string>
    <string name="add_task">Add</string>
    <string name="remove_completed_tasks">Remove completed tasks</string>

    <string name="menu_accept">Accept</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manage_lists">Manage lists</string>

    <string name="title_activity_manage_lists">Manage Lists</string>
    <string name="add_list">Add List</string>
    <string name="discard_lists">Discard Lists</string>
    <string name="confirmation_remove_completed_tasks">Archived completed tasks from</string>
    <string name="confirmation_moved_task">Moved task to</string>

    <string name="information_syncing_data">Synchronising with Google Drive&#8230;</string>
    <string name="information_saving_task_changes">Saving task changes</string>

    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_message">Permanently delete task?</string>
    <string name="delete_task_positive">Delete</string>
    <string name="move_task_title">Move to another list</string>
    <string name="move_task_positive">Move task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="edit_task_positive">OK</string>
    <string name="dialog_generic_cancel">Cancel</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="menu_task_edit">Edit</string>
    <string name="menu_task_move">Move</string>
    <string name="menu_task_delete">Delete</string>

    <string name="button_task_delete">Delete Task</string>

    <string name="content_description_mini_overflow">Actions for this task</string>
    <string name="filler">This is placeholder text</string>

</resources>
